Updated size and correct spacing

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
 }
 
 .title-bar {
-    width: 1050px;
+    width: 800px;
     height: 70px;
     background-color: #1F3879;
     border-radius: 20px; 
@@ -75,10 +75,10 @@
 }
 
 .step-1,.step-2,.step-3{
-    height: 5rem;
+    height: 205px;
     background-color: #D6A840;
     color: white;
-    padding: 1rem;               
+    padding: 20px;               
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -98,17 +98,20 @@
 }
 
 .step-1{
-    width: 16rem;
+    height: 150px;
+    width: 505px;
     margin-left: 0;
-    margin-top: 0;
+    margin-top: 3rem;
 }
 .step-2{
-    width: 20rem;
+    height: 200px;
+    width: 750px;
     margin-left: 0;
     margin-top: 1rem;
 }
 .step-3{
-    width: 24rem;
+    height: 250px;
+    width: 1050px;
     margin-left: 0;
     margin-top: 1rem;
 }
